# espanso-nice-dev-refs

./: .editorconfig  .editorconfig-checker.json  .envrc  .gitignore  README.md  aqua.yaml  lefthook.yaml  pyproject.toml  renovate.json5
.config/: .gitignore  lefthook.rc  mise.ci.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-test.yml
.run/: pytest in test.run.xml
match/: url_ref.yml
nice-dev-refs/: README.md  _manifest.yml  package.yml
scripts/: label_for_url.py
test/: requirements.txt  test_azuredevops.py  test_bitbucket.py  test_confluence.py  test_dockerhub.py  test_general.py  test_gitea.py  test_github.py  test_gitlab.py  test_jenkins.py  test_jira.py  test_msteams.py  test_nop.py  test_openshift.py  test_stackexchange.py  test_youtrack.py
