[build-system]
requires = ["poetry_core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "espanso-nice-dev-refs"
version = "0.0.0" # not used, cf. nice-dev-refs/_manifest.yml
description = "A package for espanso; takes URLs from the clipboard and inserts a formatted link based on it."
authors = [
    "Raphael Reitzig <4246780+reitzig@users.noreply.github.com>",
]
maintainers = [
    "Raphael Reitzig <4246780+reitzig@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/reitzig/espanso-nice-dev-refs"
documentation = "https://github.com/reitzig/espanso-nice-dev-refs/blob/main/README.md"
classifiers=[
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.group.dev.dependencies]
assertpy = "1.1"
black = "23.10.1"
coverage = {version = "7.3.2", extras = ["toml"]}
editorconfig-checker = "2.7.3"
poethepoet = "0.24.1"
pytest = "7.4.3"
ruff = "0.1.3"

[tool.poe.tasks.test]
shell = """
    coverage run -m pytest
    coverage report
"""

[tool.poe.tasks.lint]
shell = """
    black --check .
    ruff check --respect-gitignore . && echo "ruff: clean"
"""

[tool.pytest.ini_options]
pythonpath = [
    "scripts",
    "test",
]
log_cli=true
log_level="DEBUG"

[tool.coverage.run]
source = [
    "scripts"
]

[tool.coverage.report]
fail_under = 99
skip_empty = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

[tool.ruff]
# cf. https://beta.ruff.rs/docs/rules/
select = [
    "A", "ANN", "ARG", "B", "C4", "COM", "E", "F", "FA", "FLY",
    "INP", "INT", "N", "PGH", "PT", "PTH", "PYI", "RET", "RUF",
    "SIM", "SLF", "TCH", "UP", "W"]
# Set maximum line length to `ceil(1.1 * $black.line-length) to
# make ruff's E501 equivalent to B950 (which is not implemented)
# cf. https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
#     https://github.com/astral-sh/ruff/issues/389
line-length = 110
ignore = [
    "COM812",   # incompatible with Black code style
    "RET505",   # I prefer symmetric structure
]

[tool.black]
line-length = 100
target-version = ['py310']
