[build-system]
requires = ["poetry_core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "espanso-nice-dev-refs"
version = "0.0.0" # not used, cf. nice-dev-refs/_manifest.yml
description = "A package for espanso; takes URLs from the clipboard and inserts a formatted link based on it."
authors = [
    "Raphael Reitzig <4246780+reitzig@users.noreply.github.com>",
]
maintainers = [
    "Raphael Reitzig <4246780+reitzig@users.noreply.github.com>",
]
readme = "README.md"
repository = "https://github.com/reitzig/espanso-nice-dev-refs"
documentation = "https://github.com/reitzig/espanso-nice-dev-refs/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Plugins",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
assertpy = "1.1"
coverage = { version = "7.4.1", extras = ["toml"] }
editorconfig-checker = "2.7.3"
poethepoet = "0.24.4"
pytest = "8.0.1"
ruff = "0.2.2"

[tool.poe.tasks.test]
shell = """
    coverage run -m pytest
    coverage report
"""

[tool.poe.tasks.lint]
shell = """
    ruff format --check .
    ruff check --respect-gitignore . && echo "ruff: clean"
"""

[tool.pytest.ini_options]
pythonpath = [
    "scripts",
    "test",
]
log_cli = true
log_level = "DEBUG"

[tool.coverage.run]
source = [
    "scripts"
]

[tool.coverage.report]
fail_under = 99
skip_empty = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# cf. https://beta.ruff.rs/docs/rules/
select = [
    "A", "ANN", "ARG", "B", "C4", "COM", "E", "F", "FA", "FLY",
    "INP", "INT", "N", "PGH", "PT", "PTH", "PYI", "RET", "RUF",
    "SIM", "SLF", "TCH", "UP", "W"]
ignore = [
    "COM812", # incompatible with Black code style
    "RET505", # I prefer symmetric structure
]
