[project]
authors = [
    {name = "Raphael Reitzig", email = "4246780+reitzig@users.noreply.github.com"},
]
maintainers = [
    {name = "Raphael Reitzig", email = "4246780+reitzig@users.noreply.github.com"},
]
name = "espanso-nice-dev-refs"
version = "0.0.0" # not used, cf. nice-dev-refs/_manifest.yml
description = "A package for espanso; takes URLs from the clipboard and inserts a formatted link based on it."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Plugins",
]
requires-python = ">=3.9,<3.14"
dependencies = []

[project.urls]
repository = "https://github.com/reitzig/espanso-nice-dev-refs"
documentation = "https://github.com/reitzig/espanso-nice-dev-refs/blob/main/README.md"

[dependency-groups]
dev = [
    "assertpy==1.1",
    "coverage[toml]==7.9.1",
    "poethepoet==0.35.0",
    "pytest==8.4.0",
    "ruff==0.11.13",
]

[tool.poe.tasks.test]
sequence = [
    "coverage run -m pytest",
    "coverage report",
]
default_item_type = "cmd"

[tool.poe.tasks.lint]
sequence = [
    "ruff format --check .",
    "ruff check --respect-gitignore .",
]
default_item_type = "cmd"
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
cmd = "ruff format ."

[tool.pytest.ini_options]
pythonpath = [
    "scripts",
    "test",
]
log_cli = true
log_level = "DEBUG"

[tool.coverage.run]
source = [
    "scripts"
]

[tool.coverage.report]
fail_under = 99
skip_empty = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# cf. https://beta.ruff.rs/docs/rules/
select = [
    "A", "ANN", "ARG", "B", "C4", "COM", "E", "F", "FA", "FLY",
    "INP", "INT", "N", "PGH", "PT", "PTH", "PYI", "RET", "RUF",
    "SIM", "SLF", "TCH", "UP", "W"]
ignore = [
    "COM812", # incompatible with Black code style
    "RET505", # I prefer symmetric structure
]
